[package]
name = "tdtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = "2.2.2"
crossterm = { version = "0.27.0" }
noise = "0.8.2"
rand = "0.8.5"
ratatui = { version = "0.23.0", features = ["crossterm"] }
